syntax = "proto3";

package file_v1;

option go_package = "github.com/aziret/s3-mini-internal/pkg/filetransfer_v1";

service FileTransferServiceV1 {
  rpc UploadFile(stream FileChunkUpload) returns (UploadStatus);
  rpc DownloadFile(stream FileChunkRequest) returns (stream FileChunkDownload);
  rpc RegisterClient(PingRequest) returns (PongResponse);
}

message FileChunkUpload {
  string uuid = 1;
  bytes data = 2;
}

message FileChunkDownload {
  string uuid = 1;
  bytes data = 2;
  int64 chunk_size=3;
  int64 chunk_number=4;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message FileChunkRequest {
  string uuid = 1;
  int64 chunk_size=2;
  int64 chunk_number=3;
}

message PingRequest {
  string uuid = 1;
  string port = 2;
}

message PongResponse {
  bool success = 1;
  string message = 2;
}